# conda-anaconda-telemetry

./: .gitignore  .pre-commit-config.yaml  README.md  develop.bat  develop.sh  docker-compose.yaml  env-template  environment.yaml  otel-collector-config.yaml  prometheus.yaml  pyproject.toml  renovate.json  requirements.dev.txt
.github/: TEST_FAILURE_REPORT_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 0_bug.yml  1_feature.yml
.github/workflows/: docs.yml  pre_commit.yml  tests.yml
anaconda_conda_telemetry/: hooks.py
conda.recipe/: meta.yaml
conda_anaconda_telemetry/: __init__.py  hooks.py  metrics.py  utils.py
conda_anaconda_telemetry/backends/: __init__.py  otel.py  request_headers.py
docs/: conf.py  environment.yml  faq.md  index.md  manual_testing.md  robots.txt
docs/_static/css/: custom.css
docs/_static/fonts/Inter/: style.css
docs/_templates/: layout.html  navbar-nav-override.html  sidebar-nav-bs-override.html
docs/dev/: index.md  manual_testing.md
recipe/: meta.yaml
tests/: conftest.py  requirements-ci.txt  requirements.txt  test_hooks.py  test_integration_argmap.py  test_metrics.py
tests/backends/: test_request_headers.py
