[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "anaconda-conda-telemetry"
version = "0.1.0"
description = "Conda telemetry for Anaconda"
requires-python = ">=3.8"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  "conda",
]

[project.entry-points.conda]
anaconda-conda-telemetry = "anaconda_conda_telemetry.hooks"

[tool.setuptools]
packages = ["anaconda_conda_telemetry"]
