[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "conda-anaconda-telemetry"
version = "0.1.0"
description = "A conda plugin for Anaconda telemetry"
requires-python = ">=3.8"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  "conda",
]

[project.entry-points.conda]
anaconda-conda-telemetry = "conda_anaconda_telemetry.hooks"

[tool.setuptools.packages]
find = {}

[tool.hatch.version]
source = "vcs"
