[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "conda-anaconda-telemetry"
description = "A conda plugin for Anaconda telemetry"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
requires-python = ">=3.9"
dependencies = [
  "conda >=24.9",
]
dynamic = [
  "version"
]

[project.entry-points.conda]
conda-anaconda-telemetry = "conda_anaconda_telemetry.hooks"

[tool.setuptools.packages]
find = {}
[tool.hatch.build.hooks.vcs]
version-file = "anaconda_conda_telemetry/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "dirty-tag"

